--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
 
     <section>
         <h2>Sobre mí</h2>
-        <p>Hola, soy Juanjo Sánchez, un apasionado desarrollador web.</p>
+        <p>Hola, soy Juanjo Sánchez, un chico de 38 años, trabajador desde los 16 años, sali de los estudios muy joven y he trabajado
+        duro muchos años. Antes de entrar a la empresa en la que trabajo con un contrato fijo, he estado mas de 16 años trabajando por
+        empresas de trabajo temporal, he sido autonomo dos veces durante unos 5 años, unos meses antes de trabajar en mi empleo actual,
+        decidí que tenia que cambiar mi vida y entre a estudiar un modulo de SMR, despúes de 20 años sin estudiar fue un reto muy difícil
+        seguir adelante y aprobar el curso, este año incie el modulo superior de DAM ya que me apasiona la idea de trabajarcomo desarrollador 
+        web, pero también me esta siendo un reto mayor ya que el nivel de estudios es muy elevado. Más de una vez he pensado en dejarlo
+        pero no me quiero fallar ni a mi ni a mi madre y mi mujer, por ello sigo con la esperanza de aprender y todo sea mas facil.</p>
     </section>
 
     <section>
@@ -25,11 +31,15 @@
             </tr>
             <tr>
                 <td>Proyecto 1</td>
-                <td>Descripción del proyecto 1.</td>
+                <td>Seguir trabajando, ya que es algo necesario para vivir, pagar y mantenerse en la linea adecuada.</td>
             </tr>
             <tr>
                 <td>Proyecto 2</td>
-                <td>Descripción del proyecto 2.</td>
+                <td>Seguir estudiando y conseguir el título de DAM porque la economía que me ofrece mi empleo no es suficiente para mantenerme.</td>
+            </tr>
+            <tr>
+                <td>Proyecto 3</td>
+                <td>Viajar y disfrutar del poco tiempo libre que tengo con mi mujer, famiia y amigos.
             </tr>
         </table>
     </section>
