--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
     </section>
 
     <footer>
-        <p>Visítame en <a href="https://github.com/juanjo-sanchez">GitHub</a>.</p>
-    </footer>
+        <p>Visítame en <a href="https://juanjosesanchezcosin.github.io/Markdown/
 
     <script src="script.js"></script>
 </body>
