--- a/index.html
+++ b/index.html
@@ -13,13 +13,17 @@
 
     <section>
         <h2>Sobre mí</h2>
-        <p>Hola, soy Juanjo Sánchez, un chico de 38 años, trabajador desde los 16 años, sali de los estudios muy joven y he trabajado
-        duro muchos años. Antes de entrar a la empresa en la que trabajo con un contrato fijo, he estado mas de 16 años trabajando por
-        empresas de trabajo temporal, he sido autonomo dos veces durante unos 5 años, unos meses antes de trabajar en mi empleo actual,
-        decidí que tenia que cambiar mi vida y entre a estudiar un modulo de SMR, despúes de 20 años sin estudiar fue un reto muy difícil
-        seguir adelante y aprobar el curso, este año incie el modulo superior de DAM ya que me apasiona la idea de trabajarcomo desarrollador 
-        web, pero también me esta siendo un reto mayor ya que el nivel de estudios es muy elevado. Más de una vez he pensado en dejarlo
-        pero no me quiero fallar ni a mi ni a mi madre y mi mujer, por ello sigo con la esperanza de aprender y todo sea mas facil.</p>
+        <p>Hola, soy Juanjo Sánchez, tengo 38 años y llevo trabajando desde los 16. Dejé los estudios a una edad temprana y, desde entonces,
+        trabajó con esfuerzo y dedicación. Antes de conseguir un contrato fijo en la empresa donde trabajo actualmente, pase más de 16 años 
+        en empleos temporales y fui autónomo en dos ocasiones, sumando aproximadamente cinco años en esa modalidad.
+        Unos meses antes de empezar en mi empleo actual, decidí que era momento de cambiar mi vida y volví a estudiar, comenzando un módulo 
+        de Sistemas Microinformáticos y Redes (SMR). Después de 20 años sin tocar los libros, enfrentarme a este reto fue complicado, pero 
+        logré superarlo y aprobar el curso. Este año, me inscribí en el módulo superior de Desarrollo de Aplicaciones Multiplataforma (DAM) 
+        porque me apasiona la idea de trabajar como desarrollador web. No obstante, el nivel de exigencia es alto, y el camino se ha vuelto 
+        aún más desafiante.
+        A pesar de las dificultades y de que en más de una ocasión pensó en rendirme, me mantengo firme. No quiero fallarme a mí mismo, ni 
+        tampoco a mi madre ni a mi mujer, así que sigo adelante con la esperanza de que, con el tiempo, aprender se vuelva más fácil y alcanzar
+        mis metas sea una realidad.</p>
     </section>
 
     <section>
@@ -45,7 +49,8 @@
     </section>
 
     <footer>
-        <p>Visítame en <a href="https://juanjosesanchezcosin.github.io/Markdown/
+        <p>Visítame en <a href="https://juanjosesanchezcosin.github.io/Markdown">GitHub</a>.</p>
+    </footer>
 
     <script src="script.js"></script>
 </body>
