--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         </table>
     </section>
 
-    <footer>
-        <p>Visítame en <a href="https://juanjosesanchezcosin.github.io/Markdown">GitHub</a>.</p>
+   <footer>
+        <p>Visítame en <a href="https://https://juanjosesanchezcosin.github.io/Markdown/">GitHub</a>.</p>
     </footer>
 
     <script src="script.js"></script>
