--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </section>
 
    <footer>
-        <p>Visítame en <a href="https://https://juanjosesanchezcosin.github.io/Markdown/">GitHub</a>.</p>
+        <p>Visítame en <a href="https://juanjosesanchezcosin.github.io/Markdown/">GitHub</a>.</p>
     </footer>
 
     <script src="script.js"></script>
