--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
     </section>
 
    <footer>
-        <p>Visítame en <a href="https://juanjosesanchezcosin.github.io/Markdown/">GitHub</a>.</p>
-    </footer>
+    <p>Visítame en <a href="https://juanjosesanchezcosin.github.io/Markdown" target="_blank" rel="noopener noreferrer">Página de información</a>.</p>
+</footer>
+
 
     <script src="script.js"></script>
 </body>
