--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </section>
 
    <footer>
-    <p>Visítame en mi <a href="https://juanjosesanchezcosin.github.io/Markdown" target="_blank" rel="noopener noreferrer">Página de información</a>.</p>
+    <p>Visítame en mi <a href="https://juanjosesanchezcosin.github.io/Markdown" target="_blank" rel="noopener noreferrer">página de información</a>.</p>
 </footer>
 
 
